--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=residencia-ms
+spring.application.name=morador-ms
 
-spring.profiles.active=local
+#spring.profiles.active=local
 
 server.port=8081
 debug=false
@@ -52,5 +52,5 @@ guide.size=30
 guide.limit=30
 
 base.url=http://ec2-15-229-187-241.sa-east-1.compute.amazonaws.com
-morador.residencia.url=${base.url}:9090/sgc/residencia/buscar?%s
+morador.residencia.url=${base.url}:9091/sgc/residencia/buscar?%s
 
