--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -52,3 +52,4 @@ guide.limit=30
 
 base.url=http://localhost
 morador.residencia.url=${base.url}:8081/sgc/residencia/buscar?%s
+vinculos-ms.url=${base.url}:8085/sgc/vinculo/morador-residencia/consulta?%s
