--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,4 +53,4 @@ guide.limit=30
 
 base.url=http://ec2-15-229-187-241.sa-east-1.compute.amazonaws.com
 morador.residencia.url=${base.url}:9091/sgc/residencia/buscar?%s
-
+vinculos-ms.url=${base.url}:9095/sgc/vinculo/morador-residencia/consulta?%s
