--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,6 +26,10 @@ vinculo:
   topic:
     name: vinculo-mq
     
+vinculo2:
+  topic:
+    name: vinculo-processo-mq
+    
 contribuicao:
   topic:
     name: contribuicao-mq
